# adaptive-preference-engine

./: .gitignore  .orphaned_at  CLAUDE.md  LICENSE  PHASE1_DESIGN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SKILL.md  claude-code.config.json  demo.py  index.html  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: ape-buddy.md  coverage-auditor.md  drift-detector.md  preference-health-checker.md  signal-auditor.md
docs/: REPO_MAP.md
hooks/: hooks.json  prompt-workaround.sh
scripts/: __init__.py  agent_hook.py  agentic_loops.py  assoc_meta.py  auto_detector.py  bayesian_strength_calculator.py  behaviors.py  cli.py  cli_utils.py  compaction.py  concurrency_control.py  confidential_classifier.py  config.py  consolidation_engine.py  distributed_lock.py  habit_tracker.py  inbox_ingester.py  memory_generator.py  migrate_learning.py  migrate_to_sqlite.py  models.py  onboarding.py  paths.py  pattern_analyzer.py  posttool-memory-intercept.py  posttool-signal-detector.py  preference_loader.py  preference_templates.py  query_index.py  session-end-hook.sh  session-start-hook.sh  signal_processor.py  significance_consolidation_bridge.py  significance_tester.py  statusline.sh  storage.py  suggestion_engine.py  sync.py  tag_validation.py  trend_predictor.py  (+2 more)
tests/: test_assoc_generate.py  test_assoc_meta.py  test_cli.py  test_compaction.py  test_confidential_storage.py  test_config.py  test_context_detection.py  test_demand_loading.py  test_integration_lifecycle.py  test_knowledge_auto_classification.py  test_knowledge_injection.py  test_models.py  (+14 more)
(+41 files in other folders)
