[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-preference-engine"
version = "1.0.0"
description = "AI system that learns user coding preferences through implicit feedback"
requires-python = ">=3.9"
dependencies = [
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
adaptive-cli = "scripts.cli:main"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["scripts*", "adaptive_preference_engine*"]
exclude = ["tests*", "build*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
